src/test/ui/extern/external-doc-error.stderr
error: couldn't read $DIR/not-a-file.md: $FILE_NOT_FOUND_MSG (os error 2)
  --> $DIR/external-doc-error.rs:5:1
   |
LL | #[doc(include = "not-a-file.md")] //~ ERROR: couldn't read
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

